Increased the height on the card on smaller screens to avoid cutting out content

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .card-deck .card {
     background-color: whitesmoke;
-    max-height: 480px;
+    height: 480px;
     max-width: 380px;
     min-width: 340px;
     margin-left: 0px;
@@ -68,7 +68,7 @@
     }
     .card-deck .card {
         width: 90% !important;
-        height: 400px;
+        height: 500px;
         margin: 10px;
         padding: 5px;
     }
